# pcgd-bulk

./: Cargo.toml
src/: household_info.rs  http_client.rs  main.rs
