[package]
name = "pcgd-bulk"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
calamine = "0.26.1"
colored = "2.1.0"
inquire = "0.7.5"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
rfd = "0.15.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
unidecode = "0.3.0"
